# vim: set noexpandtab:

2013-04-05 Steve
	* Updated getEventWeightFixed to fix incorrect sumw for various samples in n0138

2013-03-30 Steve
	* Update lumi for A-L dataset: 20690.4 -> 20339.8
	* Tagging SusyNtuple-00-00-53

2013-03-29 Steve
	* Updated SUSYTools in install script to SUSYTools-00-02-08
	* Added ECut_TileTrip enum for tile trip cleaning cut
		* Added to the end for backwards compatibility

2013-03-25 Matt
	* Changing Region D in DilTrigLogic threshold from 20 --> 18

2013-03-13 Steve
	* Tagging SusyNtuple-00-00-52

2013-03-12 Steve
	* Fixed indentation in SusyNt.h
	* Fixed comment syntax in SusyNt.h, which apparently screws up ROOT dictionary/streamer generation
		* Replaced //!< with just //

2013-03-11 davide
	* add Event::mllMcTruth

2013-03-11 Matt
	* Fixed but in passDeadRegion: forgot fabs() around DeltaPhi
	* Added in sorting for signal jets

2013-03-06 Davide
	* Add truth Higgs decay for WH (diff SusyNtuple-00-00-50 SusyNtuple-00-00-50-branch)
	* Add WhTruthExtractor

2013-03-04 Steve
	* Added hasOS method for taus
	* Added getMT2 with lep1, lep2, met arguments
	* Updated SUSYTools in install script
	* Rearranged the signal lepton cuts for speed
		* Isolation corrections now come last

2013-03-01 Matt 
	* Changed getMet function to never override the phi of the met for systematics.

2013-02-23 Serhan Mete <amete@cern.ch>
	* Root/SleptonXsecReader.cxx: Added the option kLHRHCombined
	  Use w/ caution, only implemented for getCrossSection[Error](mcid,finalState)
	  For Error, LH and RH cross section errors are asumed to be 100% positively correlated
	* Added: data/DLiSlep_SignalUncertainties_All.root
	* MERGE SusyNtuple SusyNtuple-00-00-00-branch [315917]-[316945] into trunk
	* Cross section reader from Davide for Slepton grids

2013-02-20 Steve
	* Added etx and ety pieces for each MET ref term
	* Tagging SusyNtuple-00-00-51

2013-02-19 Matt
	* Updated SusyNtTools passDeadRegions to check all MC

2013-02-16 Anyes