@@ -170,9 +170,9 @@ bool SusyNtAna::isDuplicate(unsigned int run, unsigned int event){
 // Default weight uses A-D lumi
 // You can supply a different luminosity, but the pileup weights will still correspond to A-D
 /*--------------------------------------------------------------------------------*/
-float SusyNtAna::getEventWeight(float lumi)
+float SusyNtAna::getEventWeight(float lumi, bool useSumwMap)
 {
-  return SusyNtTools::getEventWeight(nt.evt(), lumi);
+  return SusyNtTools::getEventWeight(nt.evt(), lumi, useSumwMap, &m_sumwMap);
 }
 /*--------------------------------------------------------------------------------*/
 float SusyNtAna::getEventWeightFixed(unsigned int mcChannel, float lumi)
@@ -339,4 +339,18 @@ void SusyNtAna::dumpSignalObjects()
       m_signalJets[iJ]->print();
     }
   }
+}
+
+/*--------------------------------------------------------------------------------*/
+// Build a map of MCID -> sumw.
+// This method will loop over the input files associated with the TChain.
+// The MCID in the first entry of the tree will be used, so one CANNOT use this
+// if multiple datasets are combined into one SusyNt tree file!
+// The generator weighted cutflow histograms will then be used to calculate the total sumw for each MCID.
+// Each dataset used here must be complete, they CANNOT be spread out across multiple jobs.
+// However, one can have more than one (complete) dataset in the chain which is why we use the map.
+/*--------------------------------------------------------------------------------*/
+void SusyNtAna::buildSumwMap(TChain* chain)
+{
+  m_sumwMap = SusyNtTools::buildSumwMap(chain);
 }
