@@ -70,7 +70,7 @@ class SusyNtAna : public TSelector, public SusyNtTools
     // Get event weight - contains generator, pileup, xsec, and lumi weights
     // Default weight uses A-L lumi and pileup weights
     // You can supply a different luminosity, but the pileup weights will store correspond to the default dataset
-    virtual float getEventWeight(float lumi = LUMI_A_L);
+    virtual float getEventWeight(float lumi = LUMI_A_L, bool useSumwMap = false);
     // Temporary fixed version for n0105
     virtual float getEventWeightFixed(unsigned int mcChannel, float lumi = LUMI_A_L);
     // Use this function to scale MC to the A-B3 unblinded dataset
@@ -116,6 +116,15 @@ class SusyNtAna : public TSelector, public SusyNtTools
     std::string sampleName() { return m_sample; }
     void setSampleName(std::string s) { m_sample = s; }
 
+    // Build a map of MCID -> sumw.
+    // This method will loop over the input files associated with the TChain.
+    // The MCID in the first entry of the tree will be used, so one CANNOT use this
+    // if multiple datasets are combined into one SusyNt tree file!
+    // The generator weighted cutflow histograms will then be used to calculate the total sumw for each MCID.
+    // Each dataset used here must be complete, they CANNOT be spread out across multiple jobs.
+    // However, one can have more than one (complete) dataset in the chain which is why we use the map.
+    void buildSumwMap(TChain* chain);
+
     // Dump timer
     void dumpTimer();
 
@@ -144,10 +153,12 @@ class SusyNtAna : public TSelector, public SusyNtTools
     
     std::string m_sample;       // sample name string
 
-
     // To debug events in input file 
     RunEventMap m_eventList;          //run:event to debug 
     RunEventMap m_eventListDuplicate; //Checks for duplicate run/event
+
+    // Map of MCID -> sumw, optionaly filled at beginning of job
+    std::map<unsigned int, float>       m_sumwMap;
 
 
     //
